--- a/src/app/album-detail/album-detail.component.html
+++ b/src/app/album-detail/album-detail.component.html
@@ -1,1 +1,5 @@
-<h2>This album has id number: {{albumId | number:'2.' }}</h2>
+<div>
+  <h3>{{(albumToDisplay | async)?.title}}</h3>
+  <h4>{{(albumToDisplay | async)?.artist}}</h4>
+  <p>{{(albumToDisplay | async)?.description}}</p>
+</div>
