--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,3 +16,8 @@
   <router-outlet></router-outlet>
 </div>
 
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin"><h3>Admin</h3></a>
+  </div>
+</footer>
