--- a/src/app/edit-album/edit-album.component.html
+++ b/src/app/edit-album/edit-album.component.html
@@ -2,13 +2,14 @@
 
 <label>New Album Title:</label>
 <input [(ngModel)]="selectedAlbum.title">
-<br>
+<hr>
 
 <label>New Album Artist:</label>
 <input [(ngModel)]="selectedAlbum.artist">
-<br>
+<hr>
 
 <label>New Album Description:</label>
 <input [(ngModel)]="selectedAlbum.description">
-
+<br>
 <button (click)="beginUpdatingAlbum(selectedAlbum)">Update</button>
+<button (click)="beginDeletingAlbum(selectedAlbum)">Delete</button>
